sửa lỗi ảnh phần footer

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                                     <div class="socials">
                                           <a href="#!">
                                                 <img
-                                                      src="/assets/icons/twitter_icon.svg"
+                                                      src="./assets/icons/twitter_icon.svg"
                                                       alt="twitter"
                                                       class="icon"
                                                 />
